# a5c-cell

./: .context  .detectsecretsrc  .env.example  .gitignore  .gitlab-ci.yml  .secrets.baseline  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  docker-compose.yml  gitnexus_chunk.txt  pyproject.toml  worker-prompt.md
.build/validation-receipts/: issue-12-7eb44bf408e9.json  issue-12-b1ab5870261e.json  issue-13-495ee81c56c9.json  issue-13-5664c2007fd4.json  issue-14-019012e8ecef.json  issue-14-7e8c6af07cb6.json  issue-15-7e8c6af07cb6.json  (+196 more)
.codex-flow/: board.json
.omx/: metrics.json
agents/: .gitlab-ci-agent.yml  Makefile.agent.template
docs/: ARCHITECTURE.md  DOCS_SYNC.json  PLAN.md  README.md  ROADMAP.md  SPEC-DEV-EXPERIENCE-AND-ADR703.md  SPEC-DEV-EXPERIENCE-AND-ADR704.md  TASKS.md  bootstrap-guide.md  infra-day2-example.html  openapi.yaml
scripts/: agent_cli.py  agent_invoke.py  backfill_agent_status.py  backfill_tenant_execution_role_arn.py  bootstrap.py  build_layer.py  check_gitlab_protected_environment.py  check_rules_sync.sh  container_runtime_audit.py  deploy_agent.py  deploy_frontend.py  detect_secrets_filters.py  dev-bootstrap.py  dev_bootstrap.py  dev_invoke.py  docs_sync_audit.py  ensure_ubs.py  evaluate_agent.py  failover_lock.py  generated_state_audit.py  hash_layer.py  install-dev-tools.sh  install_tools.py  local_api.py  ops.py  platform_cli.py  promote_agent.py  register_agent.py  rollback_agent.py  task.py  tools.json  validate_agent_manifest.py  validate_local.py  wait_for_local_services.py  worktree_issues.py  worktree_probe.py
spa/: package-lock.json  package.json  vite.config.ts
(+557 files in other folders)
